[package]
name = "mio"
version = "0.1.0"
authors = ["Sedorriku#1949"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0.147"
chrono = "0.4.23"
ctrlc = "3.2.3"
thiserror = "1.0.31"
yeet-ops = "1.0.0"
once_cell = "1.16.0"
serde_json = "1.0.89"
magic-crypt = "3.1.12"
rand = "0.8.5"

rust-i18n = "1.0.1"
rust-i18n-macro = "0.4.0"
rust-i18n-extract = "1.0.0"
rust-i18n-support = "1.0.0"


# translation
anyhow = "1"
clap = "4.0.29"
itertools = "0.10.3"
quote = "1"
serde_derive = "1"

fluent = "0.16.0"

# cli
whoami = "1.2.3"
device_query = "1.1.1"

[profile.release]
strip = true
opt-level = 3
overflow-checks = true
lto = true

[profile.dev]
strip = true
opt-level = 1
overflow-checks = true

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.sqlx]
version="0.6.2"
features = ["runtime-tokio-rustls", "mysql"]

[build-dependencies]
glob = "0.3"
regex = "1"